--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-color: #49455f;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
