--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,19 +1,24 @@
 .message {
-
+    background-color: #02f5f5;
+    border-radius: 15px;
+    margin: 10px;
 }
+
 
 .imageAndText {
 
 }
 
+
 .imageAndText img {
-    width: 80px;
-    height: 80px;
+    max-width: 60px;
+    margin: 10px;
 }
 
 .text {
-
+    padding-left: 10px
 }
+
 
 .text:after {
 
@@ -28,5 +33,6 @@
 }
 
 .time {
-
+    padding-left: 10px
 }
+
