--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,38 +1,56 @@
 .friendMessage {
-    background-color: #e1e2f4;
-    border-radius: 15px;
-    margin: 10px;
-    max-width: 50%;
-    min-width: 80px;
+    max-width: 810px;
+    margin-left: 30px;
+    min-height: 100px;
 }
 
 .friendImageAndText {
+    width: 800px;
 
 }
 
 .friendImageAndText img {
+    max-width: 60px;
     border-radius: 50%;
-    width: 60px;
-    margin: 10px;
+    float: left;
 }
 
 .friendText {
-    padding-left: 10px
+
+    min-width: 80px;
+    max-width: 650px;
+    margin-left: 20px;
+
+
+    background-color: #f3f5f9;
+    border-radius: 15px;
+
+    padding: 10px;
+    box-shadow: 0 3px 5px 3px #e7e5e5;
+    display: inline-block;
+
+
 }
 
 .friendText:after {
+    content: "";
+    clear: both;
+    display: table;
 
 }
 
 .friendName {
-
+    font-weight: bold;
 }
 
 .friendMessageText {
+
 
 }
 
 
 .friendTime {
-    padding-left: 10px
+    margin-top: 5px;
+    margin-left: 5px;
+    font-weight: bold;
 }
