--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,74 @@
 .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 20%;
+    height: 100%;
+    padding: 15px;
+    background: linear-gradient(#c9c9f3, #eedbde);
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+
 }
 
 .sidebar.open {
+    transform: translateX(0);
+    flex: none;
 }
 
 .background {
+    background-color: rgba(0,0,0,0.5);
+    height: 100%;
+    position: absolute;
+    width: 100%;
 }
 
 .nav {
+    display: grid;
+
 }
 
 .nav a {
+    text-decoration: none;
+    text-align: center;
+    line-height: 2rem;
 }
 
 .nav a:hover {
+    text-decoration: none;
+    color: white;
 }
 
 .nav a.active {
+    text-decoration: none;
 }
+
 .close {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+    -webkit-appearance: none;
+    border: 0;
+    background: transparent;
+    border-radius: 0;
+    height: 70px;
+    width: 30px;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-left: 25px;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .close img {
+
 }
+
+.active {
+    color: #ffffff;
+}
+
+
+
