--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -38,7 +38,7 @@
 .nav a:hover {
     text-decoration: none;
     color: white;
-    background: #ecdade;
+    background: #a0a0fa;
     border-radius: 10px;
 }
 
