--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -11,9 +11,7 @@
 }
 
 .loaderLineWrap {
-    animation:
-            spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite
-;
+    animation: spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite;
     box-sizing: border-box;
     height: 50px;
     left: 0;
@@ -23,6 +21,7 @@
     transform-origin: 50% 100%;
     width: 100px;
 }
+
 .loaderLine {
     border: 4px solid transparent;
     border-radius: 100%;
@@ -35,11 +34,26 @@
     top: 0;
     width: 100px;
 }
-.loaderLineWrap:nth-child(1) { animation-delay: -50ms; }
-.loaderLineWrap:nth-child(2) { animation-delay: -100ms; }
-.loaderLineWrap:nth-child(3) { animation-delay: -150ms; }
-.loaderLineWrap:nth-child(4) { animation-delay: -200ms; }
-.loaderLineWrap:nth-child(5) { animation-delay: -250ms; }
+
+.loaderLineWrap:nth-child(1) {
+    animation-delay: -50ms;
+}
+
+.loaderLineWrap:nth-child(2) {
+    animation-delay: -100ms;
+}
+
+.loaderLineWrap:nth-child(3) {
+    animation-delay: -150ms;
+}
+
+.loaderLineWrap:nth-child(4) {
+    animation-delay: -200ms;
+}
+
+.loaderLineWrap:nth-child(5) {
+    animation-delay: -250ms;
+}
 
 .loaderLineWrap:nth-child(1) .loaderLine {
     border-color: hsl(0, 80%, 60%);
@@ -47,24 +61,28 @@
     width: 90px;
     top: 7px;
 }
+
 .loaderLineWrap:nth-child(2) .loaderLine {
     border-color: hsl(60, 80%, 60%);
     height: 76px;
     width: 76px;
     top: 14px;
 }
+
 .loaderLineWrap:nth-child(3) .loaderLine {
     border-color: hsl(120, 80%, 60%);
     height: 62px;
     width: 62px;
     top: 21px;
 }
+
 .loaderLineWrap:nth-child(4) .loaderLine {
     border-color: hsl(180, 80%, 60%);
     height: 48px;
     width: 48px;
     top: 28px;
 }
+
 .loaderLineWrap:nth-child(5) .loaderLine {
     border-color: hsl(240, 80%, 60%);
     height: 34px;
