--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -8,6 +8,7 @@
     background: linear-gradient(#c9c9f3, #eedbde);
     transform: translateX(-100%);
     transition: transform 0.5s;
+    z-index: 100;
 }
 
 .sidebar.open {
