--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -1,22 +1,33 @@
 .buttonsContainer {
+    display: flex;
 }
 
 .responseContainer {
+
+    display: flex;
+    align-items: center;
 }
 
 .imageContainer {
+margin: 50px;
 }
 
 .image {
+    max-width: 350px;
+    max-height: 350px;
 }
 
 .textContainer{
+    align-items: center;
 }
 
 .code {
+    font-size: 26px;
 }
 
 .text {
+
 }
 .info {
+
 }
